--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>Getting Started</title>
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <title>Breakout</title>
+  <link rel="stylesheet" href="css/reset.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/fonts.css" type="text/css">
 </head>
 
 <body>
-  <ul>
-    <li><a href="cjgammon-tutorial/">CJGammon Tutorial</a></li>
-    <li><a href="breakout/dist/">Breakout</a></li>
-  </ul>
+  <div class="app-container">
+    <canvas id="app"></canvas>
+  </div>
+
+  <script src="src/index.ts"></script>
 </body>
 
 </html>
